Updated fixed for progress bar aligned to android

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -267,6 +267,12 @@ p {
   column-gap: 2%;
 }
 
+.grid-global-columns-x4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 2%;
+}
+
 .grid-global-row-x3 {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
